# fast-api-smartspeech-backend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: api.py  papers.py
app/core/: config.py  events.py
app/db/: events.py
app/models/domain/: papers.py
app/models/schemas/: papers.py
